# tool-output-format

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_output_format/: __init__.py
tests/: test_format.py
